[WEEK056] Java Agent static loading and dynamic loading